--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-8">
-                <h1>Welcome to My Blog</h1>
+                <h1>뚜뚜 world Welcome to My Blog</h1>
                 <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
             </div>
             <div class="col-lg-4">
