--- a/html/blog.html
+++ b/html/blog.html
@@ -5,9 +5,12 @@
 <div id="header"></div>
 
 <body>
-    <div class="container mt-5">
-        <!-- Content ... -->
+    <div class="content container mt-5">
+        <!-- Blog Content ... -->
     </div>
+
+    <!-- Include Footer -->
+    <div id="footer"></div>
 
     <script src="/js/scripts.js"></script>
 </body>
