--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <title>My Blog</title>
 </head>
 
 <body>
-    <!-- Include Header -->
+    <!-- Sidebar -->
     <div id="header"></div>
 
     <!-- Main Content -->
-    <div class="container mt-5">
+    <div class="content container mt-5">
         <div class="row">
             <div class="col-lg-8">
                 <h1>뚜뚜 world Welcome to My Blog</h1>
@@ -39,5 +36,4 @@
 
     <script src="/js/scripts.js"></script>
 </body>
-
 </html>
