--- a/html/blog.html
+++ b/html/blog.html
@@ -5,8 +5,12 @@
 <div id="header"></div>
 
 <body>
-    <div class="content container mt-5">
-        <!-- Blog Content ... -->
+    <div class="menu-icon" onclick="openNav()">
+        &#9776; Menu
+    </div>
+
+    <div class="container mt-5">
+        <!-- Content ... -->
     </div>
 
     <!-- Include Footer -->
@@ -14,4 +18,5 @@
 
     <script src="/js/scripts.js"></script>
 </body>
+
 </html>
