--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>My Blog</title>
-</head>
+<!-- Include Header -->
+<div id="header"></div>
 
 <body>
-    <!-- Sidebar -->
-    <div id="header"></div>
+    <div class="menu-icon" onclick="openNav()">
+        &#9776; Menu
+    </div>
 
     <!-- Main Content -->
-    <div class="content container mt-5">
+    <div class="container mt-5">
         <div class="row">
             <div class="col-lg-8">
                 <h1>뚜뚜 world Welcome to My Blog</h1>
@@ -36,4 +32,5 @@
 
     <script src="/js/scripts.js"></script>
 </body>
+
 </html>
