--- a/html/blog.html
+++ b/html/blog.html
@@ -5,12 +5,8 @@
 <div id="header"></div>
 
 <body>
-    <div class="menu-icon" onclick="openNav()">
-        &#9776; Menu
-    </div>
-
-    <div class="container mt-5">
-        <!-- Content ... -->
+    <div class="content container mt-5">
+        <!-- Blog Content ... -->
     </div>
 
     <!-- Include Footer -->
@@ -18,5 +14,4 @@
 
     <script src="/js/scripts.js"></script>
 </body>
-
 </html>
