--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Include Header -->
-<div id="header"></div>
+<head>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Blog</title>
+</head>
 
 <body>
-    <div class="menu-icon" onclick="openNav()">
-        &#9776; Menu
-    </div>
+    <!-- Sidebar -->
+    <div id="header"></div>
 
     <!-- Main Content -->
-    <div class="container mt-5">
+    <div class="content container mt-5">
         <div class="row">
             <div class="col-lg-8">
                 <h1>뚜뚜 world Welcome to My Blog</h1>
@@ -31,6 +35,6 @@
     <div id="footer"></div>
 
     <script src="/js/scripts.js"></script>
+    
 </body>
-
 </html>
