--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/js/scripts.js"></script>
     <title>My Blog</title>
 </head>
 
 <body>
-    <!-- Sidebar -->
+
+    <!-- Header -->
     <div id="header"></div>
 
     <!-- Main Content -->
@@ -31,9 +33,8 @@
         </div>
     </div>
 
-    <!-- Include Footer -->
+    <!-- Footer -->
     <div id="footer"></div>
-
-    <script src="/js/scripts.js"></script>
 </body>
+
 </html>
