--- a/index.html
+++ b/index.html
@@ -21,6 +21,65 @@
             <div class="col-lg-8">
                 <h1>뚜뚜 world Welcome to My Blog</h1>
                 <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
             </div>
             <div class="col-lg-4">
                 <div class="card">
@@ -32,7 +91,7 @@
             </div>
         </div>
     </div>
-
+    
     <!-- Footer -->
     <div id="footer"></div>
 </body>
