--- a/html/blog.html
+++ b/html/blog.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Include Header -->
-<div id="header"></div>
+<head>
+    <!-- Head 내용은 index.html과 동일하므로 생략합니다 -->
+</head>
 
 <body>
+    <div id="header"></div>
     <div class="content container mt-5">
         <!-- Blog Content ... -->
     </div>
-
-    <!-- Include Footer -->
     <div id="footer"></div>
 
     <script src="/js/scripts.js"></script>
