--- a/index.html
+++ b/index.html
@@ -2,98 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <title>My Blog</title>
 </head>
 
 <body>
-
-    <!-- Header -->
     <div id="header"></div>
-
-    <!-- Main Content -->
     <div class="content container mt-5">
-        <div class="row">
-            <div class="col-lg-8">
-                <h1>뚜뚜 world Welcome to My Blog</h1>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-                <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
-            </div>
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">About Me</h5>
-                        <p class="card-text">This is a short description about myself. I'm a blogger and love to share my thoughts online.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h1>뚜뚜 world Welcome to My Blog</h1>
+        <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
     </div>
-    
-    <!-- Footer -->
     <div id="footer"></div>
+
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
