--- a/html/blog.html
+++ b/html/blog.html
@@ -12,7 +12,7 @@
     </div>
     <div id="footer"></div>
 
-    <script src="/js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
