--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <title>My Blog</title>
 </head>
 
 <body>
+    <div class="overlay"></div>
     <div id="header"></div>
     <div class="content container mt-5">
         <h1>뚜뚜 world Welcome to My Blog</h1>
@@ -17,7 +18,7 @@
     </div>
     <div id="footer"></div>
 
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
