--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="overlay"></div>
-    <div id="header"></div>
+    <div id="header"></div> <!-- 상단바를 여기에 로드합니다 -->
     <div class="content container mt-5">
         <h1>뚜뚜 world Welcome to My Blog</h1>
         <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
