--- a/html/blog.html
+++ b/html/blog.html
@@ -2,7 +2,12 @@
 <html lang="en">
 
 <head>
-    <!-- Head 내용은 index.html과 동일하므로 생략합니다 -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Blog</title>
 </head>
 
 <body>
