--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/css/styles.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/dropdown.css">
+    <link rel="stylesheet" href="/css/overlay.css">
+    <!-- 끝 CSS -->
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
