--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/dropdown.css">
     <link rel="stylesheet" href="/css/overlay.css">
     <!-- 끝 CSS -->
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -22,7 +22,8 @@
     <div id="header"></div> <!-- 상단바를 여기에 로드합니다 -->
     <div class="content container mt-5">
         <h1>뚜뚜 world Welcome to My Blog</h1>
-        <p>This is a sample text for the main content. Here, you can add your blog introduction or any other information you'd like to share with your readers.</p>
+        <p>코드 등의 리뷰는 언제나 환영입니다.</p>
+        <p>Code reviews are always welcome.</p>
     </div>
     <div id="footer"></div>
 
