--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="overlay"></div>
     <div id="header"></div> <!-- 상단바를 여기에 로드합니다 -->
     <div class="content container mt-5">
-        <h1>뚜뚜 world Welcome to My Blog</h1>
+        <h1>Ryesoup world Welcome to My Blog</h1>
         <p>코드 등의 리뷰는 언제나 환영입니다.</p>
         <p>Code reviews are always welcome.</p>
     </div>
