--- a/index.html
+++ b/index.html
@@ -2,31 +2,37 @@
 <html lang="en">
 
 <head>
-    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/dropdown.css">
     <link rel="stylesheet" href="/css/overlay.css">
-    <!-- 끝 CSS -->
 
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     <title>My Blog</title>
 </head>
 
 <body>
     <div class="overlay"></div>
-    <div id="header"></div> <!-- 상단바를 여기에 로드합니다 -->
+    <div id="header"></div>
     <div class="content container mt-5">
-        <h1>Ryesoup05 world Welcome to My Blog</h1>
+        <h1>Ryesoup06 world Welcome to My Blog</h1>
         <p>코드 등의 리뷰는 언제나 환영입니다.</p>
         <p>Code reviews are always welcome.</p>
     </div>
     <div id="footer"></div>
 
+    <!-- Custom Scripts -->
     <script src="/js/scripts.js"></script>
 </body>
 
