--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="header"></div>
     <div class="content container mt-5">
         <h1>Ryesoup06 world Welcome to My Blog</h1>
-        <p>코드 등의 리뷰는 언제나 환영입니다.</p>
-        <p>Code reviews are always welcome.</p>
+        <p>코드 등의 리뷰 를 부탁드립니다.</p>
+        <p1>I kindly request a review of the code, etc.</p1>
     </div>
     <div id="footer"></div>
 
