--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="content container mt-5">
         <h1>Ryesoup06 world Welcome to My Blog</h1>
         <p>코드 등의 리뷰 를 부탁드립니다.</p>
-        <p1>I kindly request a review of the code, etc.</p1>
+        <p>I kindly request a review of the code, etc.</p>
     </div>
     <div id="footer"></div>
 
