--- a/html/blog.html
+++ b/html/blog.html
@@ -2,29 +2,38 @@
 <html lang="en">
 
 <head>
-    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/dropdown.css">
     <link rel="stylesheet" href="/css/overlay.css">
-    <!-- 끝 CSS -->
-    
+
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     <title>My Blog</title>
 </head>
 
 <body>
+    <div class="overlay"></div>
     <div id="header"></div>
     <div class="content container mt-5">
-        <!-- Blog Content ... -->
+        <h1>Blog Home</h1>
+        <p>코드 등의 리뷰 를 부탁드립니다.</p>
+        <p>I kindly request a review of the code, etc.</p>
     </div>
     <div id="footer"></div>
 
-    <script src="../js/scripts.js"></script>
+    <!-- Custom Scripts -->
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
