--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <div id="footer"></div>
 
     <!-- Custom Scripts -->
-    <script src="/js/scripts.js"></script>
+    <script src="path/to/dropdownEvents.js"></script>
+    <script src="path/to/scripts.js"></script>
 </body>
 
 </html>
