--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/dropdown.css">
-    <link rel="stylesheet" href="/css/overlay.css">
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <title>My Blog</title>
-</head>
+<div id="common-head"></div>
 
 <body>
     <div class="overlay"></div>
@@ -32,9 +13,9 @@
     </div>
     <div id="footer"></div>
 
-    <!-- Custom Scripts -->
-    <script src="path/to/dropdownEvents.js"></script>
-    <script src="path/to/scripts.js"></script>
+    <!-- Load Custom Scripts -->
+    <div id="common-scripts"></div>
+    
 </body>
 
 </html>
