--- a/html/common-scripts.html
+++ b/html/common-scripts.html
@@ -1,2 +1,2 @@
-<script src="path/to/dropdownEvents.js"></script>
-<script src="path/to/scripts.js"></script>
+<script src="/js/dropdownEvents.js"></script>
+<script src="/js/scripts.js"></script>
