--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<div id="common-head"></div>
+<head>
+    <div id="common-head"></div>
+</head>
 
 <body>
     <div class="overlay"></div>
