--- a/html/blog.html
+++ b/html/blog.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<div id="common-head"></div>
+<head>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/dropdown.css">
+    <link rel="stylesheet" href="/css/overlay.css">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <title>My Blog</title>
+
+</head>
 
 <body>
     <div class="overlay"></div>
@@ -13,8 +34,9 @@
     </div>
     <div id="footer"></div>
 
-    <!-- Load Custom Scripts -->
-    <div id="common-scripts"></div>
+    <!-- script -->
+    <script src="/js/dropdownEvents.js"></script>
+    <script src="/js/scripts.js"></script>
     
 </body>
 
