--- a/html/blog.html
+++ b/html/blog.html
@@ -36,7 +36,7 @@
     <div id="footer"></div>
 
     <!-- script -->
-    <script src="/js/dropdownEvents.js"></script>
+    <!-- <script src="/js/dropdownEvents.js"></script> -->
     <script src="/js/scripts.js"></script>
     
 </body>
