--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="footer"></div>
 
     <!-- script -->
-    <script src="/js/dropdownEvents.js"></script>
+    <!-- <script src="/js/dropdownEvents.js"></script> -->
     <script src="/js/scripts.js"></script>
     
 </body>
